Added JavaFX